# unbox

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/unbox/: __init__.py  __main__.py  base.py  cli.py  registry.py
src/unbox/extractors/: __init__.py  docx.py  pdf.py  pptx.py
tests/: conftest.py  test_cli.py  test_docx.py  test_pdf.py  test_pptx.py  test_registry.py
