[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unbox"
version = "0.1.0"
description = "A modular CLI tool to extract text content from PDF, PowerPoint, and Word files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "LiteObject" }]
keywords = ["text-extraction", "pdf", "docx", "pptx", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
]
dependencies = [
    "pymupdf>=1.24.0",
    "python-pptx>=1.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[project.scripts]
unbox = "unbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unbox"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
